<resources>
    <string name="app_name">ILC Help Desk</string>
    <string name="select_district">Select EIIN From Here..</string>
    <string name="select_school">Select School From Here..</string>
    <string name="write_comment">Write Title Here..</string>
    <string name="write_des">Write Description Here..</string>
    <string name="reporter">Reporter Email</string>
    <string name="assigner">Assaigner Email</string>
    <string name="submit">Submit</string>
</resources>
