<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SchoolActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_district"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"/>

    <Spinner
        android:id="@+id/districtSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="#30b788"/>



    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_school"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"/>


    <Spinner
        android:id="@+id/schoolSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="#30b788"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_comment"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:maxLines="1"
        android:inputType="text"
        android:maxLength="200"
        android:textColor="#000"
        android:background="#f0f0f4"
        android:padding="5dp"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_des"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/desEditText"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:maxLines="1"
        android:inputType="text"
        android:maxLength="200"
        android:textColor="#000"
        android:background="#f0f0f4"
        android:padding="5dp"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reporter"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/reporterEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLines="1"
        android:inputType="text"
        android:maxLength="200"
        android:textColor="#000"
        android:background="#f0f0f4"
        android:padding="5dp"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assigner"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/assaignerEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLines="1"
        android:inputType="text"
        android:maxLength="200"
        android:textColor="#000"
        android:background="#f0f0f4"
        android:padding="5dp"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/submit"
        android:onClick="submitButtonClicked"/>

    </LinearLayout>

</ScrollView>
